Proced makes an Emacs buffer containing a listing of the current processes
(using ps(1)).  You can use the normal Emacs commands to move around in
this buffer, and special Proced commands to operate on the processes listed.

** bug-reference.el provides clickable links to bug reports.


* Changes in Specialized Modes and Packages in Emacs 23.1

** A new `whitespace' package has been installed, and the pre-existing one
renamed to `old-whitespace'.
[FIXME someone explain why this is good, if it is...]

** abbrev was rewritten in Elisp and extended with more flexibility.
*** New functions: abbrev-get, abbrev-put, abbrev-table-get, abbrev-table-put,
    abbrev-table-p, abbrev-insert, abbrev-table-menu.
*** Special hook `abbrev-expand-functions' obsoletes `pre-abbrev-expand-hook'.
*** `make-abbrev-table', `define-abbrev', `define-abbrev-table' all take
    extra arguments for arbitrary properties.
*** New variable `abbrev-minor-mode-table-alist'.
*** `local-abbrev-table' can hold a list of abbrev-tables.
*** Abbrevs have now the following special properties:
    `:count', `:system', `:enable-function', `:case-fixed'.
*** Abbrev-tables have now the following special properties:
    `:parents', `:case-fixed', `:enable-function', `:regexp',
    `abbrev-table-modiff'.

** Help mode
*** New macro `with-help-window' should set up help windows better
than `with-output-to-temp-buffer' with `print-help-return-message'.
*** New option `help-window-select' permits to customize whether help
window shall be automatically selected when invoking help.
*** New variable `help-window-point-marker' permits to specify new
position of point in help window (for example in `view-lossage').

** view-remove-frame-by-deleting is now by default t
since users found iconification of view-mode frames distracting.

** Isearch mode

*** New command `isearch-occur' bound to `M-s o' in isearch mode
runs `occur' with the current search string.
