@@ -426,6 +426,8 @@ this buffer, and special Proced commands to operate on the processes listed.
 
 * Changes in Specialized Modes and Packages in Emacs 23.1
 
+** Icomplete: `icomplete-prospects-height' supercedes `icomplete-prospects-length'.
+
 ** A new `whitespace' package has been installed, and the pre-existing one
 renamed to `old-whitespace'.
 [FIXME someone explain why this is good, if it is...]
